[package]
name = "bendermate"
version = "0.1.0"
authors = ["Maxim Samsonov <maxim.samsonov@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "benderjs"

[lib]
name = "bendermate"
path = "src/platform.rs"
crate-type = ["dylib", "rlib"]

[build]
rustflags = [
"-C", "link-arg=-Wl,--unresolved-symbols=ignore-all",
"-C", "link-arg=-Wl,--no-as-needed"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "~2.27.0"
futures = "0.3.1"
bincode = "1.2.1"
widestring = "0.4.0"
openssl-sys = "0.9.48"
xmltree = "0.10.0"
libflate = "0.1.27"
byteorder = "1.3.4"
base64 = "0.11.0"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]

[build-dependencies]
cmake = "0.1.42"
